--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+    
     <div class="top-bar">
-        <h1>Guida al calcolo della gestione del rischio nel settore aeronautico</h1>
+        <button class="toggle-btn">☰</button>
+        <h1>Guida al Calcolo della Gestione del Rischio</h1>
     </div>
 
     <button class="toggle-btn" onclick="toggleSidebar()">☰</button>
@@ -272,6 +273,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
