--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
     <div class="top-bar">
         <button class="toggle-btn">☰</button>
-        <h1>Guida al Calcolo della Gestione del Rischio</h1>
+        <h1>Guida al Calcolo della Gestione del Rischio nel settore Aereonautico</h1>
     </div>
 
     <button class="toggle-btn" onclick="toggleSidebar()">☰</button>
@@ -273,6 +273,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
