--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>Guida al Calcolo della Gestione del Rischio nel settore Aereonautico</h1>
     </div>
 
-    <div id="sidebar" class="sidebar open">
+    <div id="sidebar" class="sidebar">
         <a href="#" onclick="carica('home')">Home</a>
         <a href="#" onclick="carica('riferimenti')">Riferimenti Normativi</a>
         <a href="#" onclick="carica('matrice')">Matrice del Rischio</a>
@@ -271,6 +271,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
