--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
     <div class="top-bar">
         <button class="toggle-btn" onclick="toggleSidebar()">☰</button>
-        <h1>Guida al Calcolo della Gestione del Rischio nel settore Aereonautico</h1>
+        <h1>Guida al Calcolo della Gestione del Rischio Aereonautico</h1>
     </div>
 
     <div id="sidebar" class="sidebar">
@@ -271,6 +271,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
