--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 <body>
     
     <div class="top-bar">
-        <button class="toggle-btn" onclick="toggleSidebar()">☰</button>
-        <h1>Guida al Calcolo della Gestione del Rischio Aereonautico</h1>
+        <button class="toggle-btn">☰</button>
+        <h1>Guida al Calcolo della Gestione del Rischio nel settore Aereonautico</h1>
     </div>
+
+    <button class="toggle-btn" onclick="toggleSidebar()">☰</button>
 
     <div id="sidebar" class="sidebar">
         <a href="#" onclick="carica('home')">Home</a>
@@ -271,8 +273,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
-
-
-
-
