--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <li><strong>ICAO (International Civil Aviation Organization):</strong> agenzia specializzata delle Nazioni Unite che stabilisce standard globali. L'Annesso 19 - Safety Management - è fondamentale per l'implementazione dei Sistemi di Gestione della Sicurezza (SMS);</li>
                 <li><strong>ENAC (Ente Nazionale per l'Aviazione Civile):</strong> autorità italiana che applica e supervisiona l'implementazione delle normative EASA e ICAO sul territorio nazionale;</li>
                 <li><strong>ISO/IEC 27035:</strong> linee guida per l’identificazione, l’analisi e la risposta agli incidenti informatici, con indicazioni sulle misure di prevenzione;</li>
-                <li><strong>LSMS & ISO/IEC 27001:</strong> standard interni e internazionali per la gestione della sicurezza delle informazioni;</li>
+                <li><strong>LVSS & ISO/IEC 27001:</strong> standard Leonardo interno basato sulle normative internazionali per la gestione della sicurezza delle informazioni;</li>
                 <li><strong>D.lgs. 81/2008:</strong> riferimento legislativo relativo alla sicurezza fisica e organizzativa dei lavoratori;</li>
                 <li><strong>Standard interni di sicurezza:</strong> politiche aziendali configurate seguendo le linee guida degli enti nazionali e sovranazionali di certificazione.</li>
             </ul>
@@ -128,7 +128,7 @@
             <h2>Download</h2>
             <p>In questa sezione è disponibile il download del documento "Guida al calcolo del fattore di rischio", all'interno del quale è possibile visionare le informazioni e le linee guida necessarie per il calcolo del fattore di rischio.</p>
             <div class="download-links">
-                <a href="#" class="btn" download>Scarica la guida (PDF)</a>
+                <a href="calcolo-fattore-di.rischio" class="btn" download>Scarica la guida (PDF)</a>
             </div>
         </section>
         
@@ -179,3 +179,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
