--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <li><strong>ICAO (International Civil Aviation Organization):</strong> agenzia specializzata delle Nazioni Unite che stabilisce standard globali. L'Annesso 19 - Safety Management - è fondamentale per l'implementazione dei Sistemi di Gestione della Sicurezza (SMS);</li>
                 <li><strong>ENAC (Ente Nazionale per l'Aviazione Civile):</strong> autorità italiana che applica e supervisiona l'implementazione delle normative EASA e ICAO sul territorio nazionale;</li>
                 <li><strong>ISO/IEC 27035:</strong> linee guida per l’identificazione, l’analisi e la risposta agli incidenti informatici, con indicazioni sulle misure di prevenzione;</li>
-                <li><strong>LVSS & ISO/IEC 27001:</strong> standard Leonardo interno basato sulle normative internazionali per la gestione della sicurezza delle informazioni;</li>
+                <li><strong>LVS & ISO/IEC 27001:</strong> standard interno aziendale per la ges􀆟one della sicurezza delle informazioni basato sulla norma􀆟va Internazionale I.S.O./I.E.C. 27001;</li>
                 <li><strong>D.lgs. 81/2008:</strong> riferimento legislativo relativo alla sicurezza fisica e organizzativa dei lavoratori;</li>
                 <li><strong>Standard interni di sicurezza:</strong> politiche aziendali configurate seguendo le linee guida degli enti nazionali e sovranazionali di certificazione.</li>
             </ul>
@@ -179,4 +179,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
