--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <li><strong>ICAO (International Civil Aviation Organization):</strong> agenzia specializzata delle Nazioni Unite che stabilisce standard globali. L'Annesso 19 - Safety Management - è fondamentale per l'implementazione dei Sistemi di Gestione della Sicurezza (SMS);</li>
                 <li><strong>ENAC (Ente Nazionale per l'Aviazione Civile):</strong> autorità italiana che applica e supervisiona l'implementazione delle normative EASA e ICAO sul territorio nazionale;</li>
                 <li><strong>ISO/IEC 27035:</strong> linee guida per l’identificazione, l’analisi e la risposta agli incidenti informatici, con indicazioni sulle misure di prevenzione;</li>
-                <li><strong>LVS & ISO/IEC 27001:</strong> standard interno aziendale per la ges􀆟one della sicurezza delle informazioni basato sulla norma􀆟va Internazionale I.S.O./I.E.C. 27001;</li>
+                <li><strong>LVS & ISO/IEC 27001:</strong> standard Leonardo interno basato sulle normative internazionali per la gestione della sicurezza delle informazioni;</li>
                 <li><strong>D.lgs. 81/2008:</strong> riferimento legislativo relativo alla sicurezza fisica e organizzativa dei lavoratori;</li>
                 <li><strong>Standard interni di sicurezza:</strong> politiche aziendali configurate seguendo le linee guida degli enti nazionali e sovranazionali di certificazione.</li>
             </ul>
@@ -115,8 +115,8 @@
             <p>In questa pagina sono riportati alcuni suggerimenti da adottare in un’azienda aeronautica per prevenire o ridurre i rischi legati alla sicurezza e alla privacy:</p>
             
             <ul>
-                <li><strong>Miglioramento continuo del LSMS (Leonardo Security Management System):</strong> Garantire efficacia e conformità agli standard di sicurezza aeronautica, affrontare nuove minacce e vulnerabilità, e rispondere adeguatamente ai requisiti normativi e ai possibili attacchi di Cyber Security.</li>
-                <li><strong>Formazione continua e specializzata:</strong> Organizzare corsi incentrati sulle procedure e le politiche di LSMS, per offrire maggiore consapevolezza in ambito di sicurezza informatica e regolamentazione privacy nel settore aeronautico all’intera popolazione aziendale.</li>
+                <li><strong>Miglioramento con􀆟nuo sulla base di L.V.S. e O.C.S.I.:</strong> Garantire efficacia e conformità agli standard di sicurezza aeronautica, affrontare nuove minacce e vulnerabilità, e rispondere adeguatamente ai requisiti normativi e ai possibili attacchi di Cyber Security.</li>
+                <li><strong>Formazione continua e specializzata:</strong> Organizzare corsi incentrati sulle procedure e le politiche di LVS, per offrire maggiore consapevolezza in ambito di sicurezza informatica e regolamentazione privacy nel settore aeronautico all’intera popolazione aziendale.</li>
                 <li><strong>Controllo rigoroso degli accessi fisici:</strong> Adottare l'autenticazione biometrica e la limitazione dei privilegi utente, con monitoraggio continuo e audit interni.</li>
                 <li><strong>Definizione di Recovery Plan e Incident Response:</strong> Elaborare piani specifici per il settore aeronautico, aerospaziale e della difesa, per garantire continuità operativa e sicurezza dei dati trattati ed elaborati.</li>
                 <li><strong>Audit regolari e valutazioni di rischio aggiornate:</strong> Mantenere il sistema di sicurezza in linea con i riferimenti normativi e tecnologici in evoluzione.</li>
@@ -128,7 +128,7 @@
             <h2>Download</h2>
             <p>In questa sezione è disponibile il download del documento "Guida al calcolo del fattore di rischio", all'interno del quale è possibile visionare le informazioni e le linee guida necessarie per il calcolo del fattore di rischio.</p>
             <div class="download-links">
-                <a href="calcolo-fattore-di.rischio" class="btn" download>Scarica la guida (PDF)</a>
+                <a href="calcolo-fattore-di-rischio.pdf" class="btn" download>Scarica la guida (PDF)</a>
             </div>
         </section>
         
@@ -179,5 +179,6 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
