--- a/index.html
+++ b/index.html
@@ -157,11 +157,10 @@
                         <label for="chiarezza">Quanto è chiaro l'elaborato?</label>
                         <select id="chiarezza" name="chiarezza" required>
                             <option value="">Seleziona...</option>
-                            <option value="1">1 - Poco chiaro</option>
-                            <option value="2">2</option>
-                            <option value="3">3 - Abbastanza</option>
-                            <option value="4">4</option>
-                            <option value="5">5 - Molto chiaro</option>
+                            <option value="1">1 - Incomprensibile</option>
+                            <option value="2">2 - Poco chiaro</option>
+                            <option value="3">3 - Abbastanza chiaro</option>
+                            <option value="4">4 - Molto chiaro</option>
                         </select>
                     </div>
                     
@@ -169,11 +168,10 @@
                         <label for="completezza">Quanto è completo il contenuto?</label>
                         <select id="completezza" name="completezza" required>
                             <option value="">Seleziona...</option>
-                            <option value="1">1 - Poco completo</option>
-                            <option value="2">2</option>
-                            <option value="3">3 - Abbastanza</option>
-                            <option value="4">4</option>
-                            <option value="5">5 - Molto completo</option>
+                            <option value="1">2 - Incompleto</option>
+                            <option value="2">1 - Poco completo</option>
+                            <option value="3">3 - Abbastanza completo</option>
+                            <option value="4">4 - Molto completo</option>
                         </select>
                     </div>
                     
@@ -181,11 +179,10 @@
                         <label for="utilità">Quanto è utile per te?</label>
                         <select id="utilità" name="utilità" required>
                             <option value="">Seleziona...</option>
-                            <option value="1">1 - Poco utile</option>
-                            <option value="2">2</option>
-                            <option value="3">3 - Abbastanza</option>
-                            <option value="4">4</option>
-                            <option value="5">5 - Molto utile</option>
+                            <option value="1">1 - Inutile</option>
+                            <option value="2">2 - Poco utile</option>
+                            <option value="3">3 - Abbastanza utile</option>
+                            <option value="4">5 - Molto utile</option>
                         </select>
                     </div>
 
