--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             <h2>Riferimenti normativi</h2>
             <p>Di seguito sono riportati i principali riferimenti normativi e standard che costituiscono la base per il calcolo del fattore di rischio e la gestione della sicurezza:</p>
             <ul>
+                <li><strong>Codice Privacy italiano (D.lgs. 196/2003, modificato dal D.lgs. 101/2018):</strong> normativa italiana per la tutela e il trattamento dei dati personali;</li>
                 <li><strong>Regolamento UE 2016/679 (GDPR):</strong> obblighi per la protezione dei dati personali di dipendenti, clienti e fornitori;</li>
                 <li><strong>EASA (European Union Aviation Safety Agency):</strong> agenzia europea che stabilisce i requisiti tecnici e le procedure per la sicurezza aerea in Europa, incluse linee guida specifiche come l'EASA Cybersecurity Framework;</li>
                 <li><strong>ICAO (International Civil Aviation Organization):</strong> agenzia specializzata delle Nazioni Unite che stabilisce standard globali. L'Annesso 19 - Safety Management - è fondamentale per l'implementazione dei Sistemi di Gestione della Sicurezza (SMS);</li>
