--- a/index.html
+++ b/index.html
@@ -192,6 +192,13 @@
                         <textarea id="feedback" name="feedback" placeholder="Scrivi qui il tuo commento..."></textarea>
                     </div>
 
+                    <div class="privacy-container">
+                        <input type="checkbox" id="privacy-policy" name="privacy-policy" required>
+                        <label for="privacy-policy">
+                            Ho letto e accetto l' <a href="informativa privacy.html" target="_blank">Informativa sulla privacy</a>.
+                        </label>
+                    </div>
+
                     <button type="submit" class="btn-submit">Invia Feedback</button>
                 </form>
             </div>
@@ -200,3 +207,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
