--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <main>
         <section id="home" class="page-section active">
             <h2>Home</h2>
-            <p>Benvenuti sul sito dedicato alla 'Gestione del Rischio Aeronautico', la piattaforma è interamente dedicata al calcolo del fattore di rischio per le aziende aeronautiche. Attraverso il menu laterale è possibile esplorare le varie sezioni, ognuna di esse dedicata a un aspetto specifico per il processo in esame: i riferimenti normativi di settore, la visualizzazione e l'interpretazione delle matrici di rischio, la simulazione dei calcoli secondo la regola generale, le Best Practice da adottare, la documentazione disponibile in formato PDF e infine la valutazione complessiva del servizio offerto. L'obiettivo è di supportare i professionisti e le aziende nel raggiungimento di standard di sicurezza sempre più elevati, fornendo gli strumenti necessari per una gestione consapevole e accurata del rischio.</p>
+            <p>Benvenuti sulla web page dedicata alla 'Gestione del Rischio Aeronautico', la piattaforma è interamente dedicata al calcolo del fattore di rischio per le aziende aeronautiche. Attraverso il menu laterale è possibile esplorare le varie sezioni, ognuna di esse dedicata a un aspetto specifico per il processo in esame: i riferimenti normativi di settore, la visualizzazione e l'interpretazione delle matrici di rischio, la simulazione dei calcoli secondo la regola generale, le Best Practice da adottare, la documentazione disponibile in formato PDF e infine la valutazione complessiva del servizio offerto. L'obiettivo è di supportare i professionisti e le aziende nel raggiungimento di standard di sicurezza sempre più elevati, fornendo gli strumenti necessari per una gestione consapevole e accurata del rischio.</p>
         </section>
 
         <section id="normative" class="page-section">
@@ -207,4 +207,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
