--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <main>
         <section id="home" class="page-section active">
             <h2>Home</h2>
-            <p>Benvenuti sulla web page dedicata alla 'Gestione del Rischio Aeronautico', la piattaforma è interamente dedicata al calcolo del fattore di rischio. Attraverso il menu laterale è possibile esplorare le varie sezioni, ognuna di esse dedicata a un aspetto specifico per il processo in esame. È possiblie consultare i riferimenti normativi dedicati al trattamento dei dati, visualizzare tabelle informative inerenti alle probabilità e all'impatto che generano il fattore di Rischio. Nella sezione Regola Generale, accessibile dal menù im alto è possibile effettuare anche una simulazione sul calcolo del fattore di rischio. Per approfondire il tutto, è stato creato un documento in formato PDF disponibile nell'area Download. Sarei lieto di ringraziarti se alla fine dell'esplorazione delle varie sezioni fosse lasciato un feedback tramite l'area di "Valutazione Finale" per migliorare il progetto in futuro con revisioni appropiate</p>
+            <p>Benvenuti sulla web page dedicata alla 'Gestione del Rischio Aeronautico', la piattaforma è interamente dedicata al calcolo del fattore di rischio. Attraverso il menu di navigazione è possibile esplorare le varie sezioni, ognuna di esse dedicata a un aspetto specifico per il processo in esame.Esplorando le sezioni dedicate potrete consultare i riferimenti normativi dedicati al trattamento dei dati, visualizzare tabelle informative inerenti alle probabilità e all'impatto che generano il fattore di Rischio. Nella sezione Regola Generale, accessibile dal menù, è presente una simulazione sul calcolo del fattore di rischio. Un documento in formato PDF, disponibile nell'area Download, approfondirà ogni aspetto non trattato sulla web page. Inoltre nella pagina "Valutazione Finale" è richiesto un feedback, per migliorare il progetto in futuro con revisioni appropiate</p>
         </section>
 
         <section id="normative" class="page-section">
@@ -207,6 +207,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
