--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
     <main>
         <section id="home" class="page-section active">
             <h2>Home</h2>
-            <p>Benvenuti sulla web page dedicata alla 'Gestione del Rischio Aeronautico', la piattaforma è interamente dedicata al calcolo del fattore di rischio. Attraverso il menu di navigazione è possibile esplorare le varie sezioni, ognuna di esse dedicata a un aspetto specifico per il processo in esame.Esplorando le sezioni dedicate potrete consultare i riferimenti normativi dedicati al trattamento dei dati, visualizzare tabelle informative inerenti alle probabilità e all'impatto che generano il fattore di Rischio. Nella sezione Regola Generale, accessibile dal menù, è presente una simulazione sul calcolo del fattore di rischio. Un documento in formato PDF, disponibile nell'area Download, approfondirà ogni aspetto non trattato sulla web page. Inoltre nella pagina "Valutazione Finale" è richiesto un feedback, per migliorare il progetto in futuro con revisioni appropiate</p>
+            <p>Benvenuti nella piattaforma dedicata alla Gestione del Rischio Aeronautico.
+Questo spazio è pensato per supportare il calcolo e l’analisi del fattore di rischio. Attraverso il menù di navigazione è possibile esplorare le diverse sezioni, ognuna delle quali affronta un aspetto specifico del processo. Sono disponibili i riferimenti normativi relativi al trattamento dei dati, tabelle informative che illustrano probabilità e impatti che determinano il fattore di rischio e, nella sezione “Regola Generale”, una simulazione interattiva per il calcolo. Nell’area Download è inoltre possibile consultare un documento in formato PDF che approfondisce i contenuti non trattati direttamente sulla piattaforma. Infine, nella sezione “Valutazione Finale”, è possibile lasciare un feedback che contribuirà a migliorare e aggiornare il progetto con revisioni mirate.</p>
         </section>
 
         <section id="normative" class="page-section">
@@ -207,6 +208,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
