--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     <main>
         <section id="home" class="page-section active">
             <h2>Home</h2>
-            <p>Benvenuti nella piattaforma dedicata alla Gestione del Rischio Aeronautico.
-Questo spazio è pensato per supportare il calcolo e l’analisi del fattore di rischio. Attraverso il menù di navigazione è possibile esplorare le diverse sezioni, ognuna delle quali affronta un aspetto specifico del processo. Sono disponibili i riferimenti normativi relativi al trattamento dei dati, tabelle informative che illustrano probabilità e impatti che determinano il fattore di rischio e, nella sezione “Regola Generale”, una simulazione interattiva per il calcolo. Nell’area Download è inoltre possibile consultare un documento in formato PDF che approfondisce i contenuti non trattati direttamente sulla piattaforma. Infine, nella sezione “Valutazione Finale”, è possibile lasciare un feedback che contribuirà a migliorare e aggiornare il progetto con revisioni mirate.</p>
+            <p>Benvenuti nella piattaforma dedicata alla Gestione del Rischio Aeronautico.<br>
+                Questo spazio è pensato per supportare il calcolo e l’analisi del fattore di rischio. Attraverso il menù di navigazione è possibile esplorare le diverse sezioni, ognuna delle quali affronta un aspetto specifico del processo. Sono disponibili i riferimenti normativi relativi al trattamento dei dati, tabelle informative che illustrano probabilità e impatti che determinano il fattore di rischio e, nella sezione “Regola Generale”, una simulazione interattiva per il calcolo. Nell’area Download è inoltre possibile consultare un documento in formato PDF che approfondisce i contenuti non trattati direttamente sulla piattaforma. Infine, nella sezione “Valutazione Finale”, è possibile lasciare un feedback che contribuirà a migliorare e aggiornare il progetto con revisioni mirate.</p>
         </section>
 
         <section id="normative" class="page-section">
@@ -208,6 +208,7 @@ Questo spazio è pensato per supportare il calcolo e l’analisi del fattore di 
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
