--- a/index.html
+++ b/index.html
@@ -31,8 +31,11 @@
         <section id="home" class="page-section active">
             <h2>Home</h2>
             <p>Benvenuti nella piattaforma dedicata alla Gestione del Rischio Aeronautico, orientata a supportare il calcolo e l’analisi del fattore di rischio.<br>
-                Attraverso il menù di navigazione è possibile esplorare le diverse sezioni, ognuna delle quali affronta un aspetto specifico del processo.<br>
-                Sono disponibili i riferimenti normativi relativi al trattamento dei dati, tabelle informative che illustrano probabilità determinanti per il fattore di rischio e, nella sezione “Regola Generale”, una simulazione interattiva per il calcolo. Nell’area Download è inoltre possibile consultare un documento in formato PDF che approfondisce i contenuti non trattati direttamente sulla piattaforma. Infine, nella sezione “Valutazione Finale”, è possibile lasciare un feedback che contribuirà a migliorare e aggiornare il progetto con revisioni mirate.</p>
+                Attraverso il menù di navigazione è possibile esplorare le diverse aree, ognuna delle quali affronta un aspetto specifico del processo in esame.<br>
+                Sono disponibili i riferimenti normativi relativi al trattamento dei dati, tabelle informative che illustrano probabilità e impatti determinanti per il fattore di rischio.<br>
+                Inoltre è presente una simulazione interattiva per il calcolo del rischio residuo nella sezione "Regola Generale".<br>
+                Nell’area Download è disponibile un documento in formato PDF che approfondisce i contenuti non trattati direttamente sulla piattaforma.<br>
+                All'interno della pagina “Valutazione Finale”, è possibile lasciare un feedback che contribuirà a migliorare e aggiornare il progetto con revisioni mirate.</p>
         </section>
 
         <section id="normative" class="page-section">
@@ -209,6 +212,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
