--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
             <h2>Home</h2>
             <p>Benvenuti nella piattaforma dedicata alla Gestione del Rischio Aeronautico, orientata a supportare il calcolo e l’analisi del fattore di rischio.<br>
                 Attraverso il menù di navigazione è possibile esplorare le diverse aree, ognuna delle quali affronta un aspetto specifico del processo in esame.<br>
-                Sono disponibili i riferimenti normativi relativi al trattamento dei dati, tabelle informative che illustrano i fattori determinanti per il calcolo del rischio.<br>
-                Inoltre è presente una simulazione interattiva per il calcolo del rischio residuo nella sezione "Regola Generale".<br>
+                Sono disponibili i riferimenti normativi relativi al trattamento dei dati, tabelle informative che illustrano i fattori determinanti per il calcolo del rischio,<br>
+                corredata da una simulazione interattiva sviluppata nel link "Regola Generale".<br>
                 Nell’area Download è disponibile un documento in formato PDF che approfondisce i contenuti non trattati direttamente sulla piattaforma.<br>
-                All'interno della pagina “Valutazione Finale”, è possibile lasciare un feedback che contribuirà a migliorare e aggiornare il progetto con revisioni mirate.</p>
+                All'interno della sezione “Valutazione Finale”, è possibile lasciare un feedback personale che contribuirà a migliorare e aggiornare il progetto con revisioni mirate.</p>
         </section>
 
         <section id="normative" class="page-section">
@@ -212,6 +212,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
