--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <main>
         <section id="home" class="page-section active">
             <h2>Home</h2>
-            <p>Benvenuti nella piattaforma dedicata alla Gestione del Rischio Aeronautico, orientata a supportare il calcolo e l’analisi del fattore di rischio.<br>
+            <p>Benvenuti nella piattaforma dedicata alla <strong>Gestione del Rischio Aeronautico</strong>, orientata a supportare il calcolo e l’analisi del fattore di rischio.<br>
                 Attraverso il menù di navigazione è possibile esplorare le diverse aree, ognuna delle quali affronta un aspetto specifico del processo in esame.<br>
                 Sono disponibili riferimenti normativi relativi al trattamento dei dati, tabelle informative che illustrano i fattori determinanti per il calcolo del rischio,
                 corredate da una simulazione interattiva sviluppata nel link "Regola Generale".<br>
@@ -212,6 +212,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
