--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <li><strong>LVS & ISO/IEC 27001:</strong> standard Leonardo interno basato sulle normative internazionali per la gestione della sicurezza delle informazioni;</li>
                 <li><strong>D.lgs. 81/2008:</strong> riferimento legislativo relativo alla sicurezza fisica e organizzativa dei lavoratori;</li>
                 <li><strong>Standard interni di sicurezza:</strong> politiche aziendali configurate seguendo le linee guida degli enti nazionali e sovranazionali di certificazione;</li>
-                <li><strong>•	O.C.S.I. (Organismo di Certificazione della Sicurezza Informatica):</strong> ente istituito in Italia con il compito di valutare e certificare la conformità di prodotti e sistemi ICT ai requisiti di sicurezza stabiliti dagli standard internazionali.</li>
+                <li><strong>O.C.S.I. (Organismo di Certificazione della Sicurezza Informatica):</strong> ente istituito in Italia con il compito di valutare e certificare la conformità di prodotti e sistemi ICT ai requisiti di sicurezza stabiliti dagli standard internazionali.</li>
             
             </ul>
         </section>
